==> JBKingdon/ADSB_Alert/src/r820t2.c <==
#include "r820t2.h"
#include <math.h>
#include <stdio.h>
#include <stdbool.h>
#include <string.h>
#include "cmsis_os.h"
#include "stm32h7xx_hal.h"
#define R820T2_I2C_WRITE_ADDRESS   ((0x1A)<<1)	    // 0011010+RW - 0x34 (w)
#define R820T2_I2C_READ_ADDRESS   (((0x1A)<<1) | 1)	// 0011010+RW - 0x35 (r)
#define XTAL_FREQ 28800000
#define CALIBRATION_LO 88000
#define R820T2_NUM_REGS     0x20
#define R820T2_WRITE_START	5
#define ARRAY_SIZE(arr) (sizeof(arr) / sizeof((arr)[0]))

void R820T2_i2c_write(uint8_t reg, uint8_t *data, uint8_t sz)
{    
    /* limit to legal addresses */
    if((reg+sz) > R820T2_NUM_REGS) return;

    uint8_t aTxBuffer[R820T2_NUM_REGS+1];
    aTxBuffer[0] = reg;
    memcpy(&aTxBuffer[1], data, sz);

    while(HAL_I2C_Master_Transmit(&hi2c1, (uint16_t)R820T2_I2C_WRITE_ADDRESS, (uint8_t*)aTxBuffer, sz+1, 10000)!= HAL_OK)
    {
        /* Error_Handler() function is called when Timeout error occurs.
        When Acknowledge failure occurs (Slave don't acknowledge its address)
        Master restarts communication */
        if (HAL_I2C_GetError(&hi2c1) != HAL_I2C_ERROR_AF)
        {
            printf("Failed to write to the R820\n");
            vTaskDelay(1000);
            Error_Handler();    // XXX better error handling
        }
    }

	return;
}

void R820T2_i2c_read_raw(uint8_t *data, uint8_t sz)
{
    // printf("R820 read %u regs\n", sz);
    
    /* check for legal reg */
    if(sz==0 || sz>R820T2_NUM_REGS)
        return;

    while(HAL_I2C_Master_Receive(&hi2c1, (uint16_t)R820T2_I2C_READ_ADDRESS, data, sz, 10000) != HAL_OK)
    {
        /* Error_Handler() function is called when Timeout error occurs.
        When Acknowledge failure occurs (Slave don't acknowledge it's address)
        Master restarts communication */
        if (HAL_I2C_GetError(&hi2c1) != HAL_I2C_ERROR_AF)
        {
            printf("failed to read from R820\n");
            vTaskDelay(1000);
            Error_Handler();    // XXX need better error handling
        }
    }

    // Need to bit reverse all the received data
    for(int i=0; i<sz; i++)
    {
        data[i] = (bitrev_lut[data[i] & 0xf] << 4) | bitrev_lut[data[i] >> 4];
    }

}

void R820T2_init(void)
{
	uint8_t i;
#if 0
	/* set up I2C - disable if initialized elsewhere */
	GPIO_InitTypeDef GPIO_InitStructure;
	I2C_InitTypeDef  I2C_InitStructure;
	
	/* turn on clock for I2C GPIO */
	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA, ENABLE);
	
	/* Enable PA9, PA10 for I2C1 */
	GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_9 | GPIO_Pin_10;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
	GPIO_Init(GPIOA, &GPIO_InitStructure);
	
	GPIO_PinAFConfig(GPIOA, GPIO_PinSource9, GPIO_AF_4);  // SCL
	GPIO_PinAFConfig(GPIOA, GPIO_PinSource10, GPIO_AF_4); // SDA
	
	/* Enable PA7 for GPIO (OLED reset) */
	GPIOA->ODR |= (1<<7);	/* reset high */
	GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_7;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
	GPIO_Init(GPIOA, &GPIO_InitStructure);

	/* turn on clock for I2C1 */
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C1, ENABLE);

	/* The I2C clock is derived from the HSI */
	RCC_I2CCLKConfig(RCC_I2C1CLK_HSI);

	/* I2C configuration */
	I2C_InitStructure.I2C_Mode = I2C_Mode_I2C;
	I2C_InitStructure.I2C_AnalogFilter = I2C_AnalogFilter_Enable;
	I2C_InitStructure.I2C_DigitalFilter = 0x00;
	I2C_InitStructure.I2C_OwnAddress1 = 0x00;
	I2C_InitStructure.I2C_Ack = I2C_Ack_Enable;
	I2C_InitStructure.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;
	I2C_InitStructure.I2C_Timing = 0x00210507;
	I2C_Init(I2C1, &I2C_InitStructure);

	/* I2C Peripheral Enable */
	I2C_Cmd(I2C1, ENABLE);
#endif

    /* initialize some operating parameters */
    r820t_xtal_freq = XTAL_FREQ;
    r820t_if_freq = 2000000;
    r820t_freq = 1090000000;
    
    /* initialize the device */
    for(i=R820T2_WRITE_START;i<R820T2_NUM_REGS;i++)
        R820T2_i2c_write_reg(i, r82xx_init_array[i]);

    /* Calibrate */
    R820T2_calibrate();
    
    /* set freq after calibrate */
    R820T2_set_freq(r820t_freq);

    // Check what other settings might be used (from dump1090)

    R820T2_set_lna_agc(true);   // Would it be better to manage these manually?
    R820T2_set_mixer_agc(true);

    // Max gain on the output seems to be needed with auto settings above and defaults for other regs
    R820T2_set_vga_gain(15);

}
