==> emeb/f303k8_nucleo/clang_test/r820t2.c <==
#include "r820t2.h"
#include "printf.h"
#define PPM_ERR -48LL
#define XTAL_FREQ 28800000
#define CALIBRATION_LO 88000
#define R820T2_I2C_ADDRESS   ((0x1A)<<1)	// 0011010+RW - 0x34 (w), 0x35 (r)
#define R820T2_NUM_REGS     0x20
#define R820T2_WRITE_START	5
#define ARRAY_SIZE(arr) (sizeof(arr) / sizeof((arr)[0]))

uint8_t R820T2_i2c_write(uint8_t reg, uint8_t data)
{
#if 0
    printf("R820T2_i2c_write(%d, %d)\n\r", reg, data);
#else    
	HAL_StatusTypeDef status = HAL_OK;
	uint8_t i2c_msg[2];
	
	/* build command */
	i2c_msg[0] = reg;
	i2c_msg[1] = data;

	/* send command */
	status = HAL_I2C_Master_Transmit(&hi2c1, R820T2_I2C_ADDRESS, i2c_msg, 2, 100);

	/* Check the communication status */
	if(status != HAL_OK)
	{
		R820T2_TIMEOUT_UserCallback();
	}

	return status;
#endif

    /* success */
	return 0;
}

uint8_t R820T2_i2c_read_raw(uint8_t *data, uint8_t sz)
{
#if 0
    printf("R820T2_i2c_read(0x%08X, %d)\n\r", data, sz);
	if(sz==1)
		*data = 0x96;
#else
	HAL_StatusTypeDef status = HAL_OK;
	status = HAL_I2C_Master_Receive(&hi2c1, R820T2_I2C_ADDRESS, data, sz, 100);

	/* Check the communication status */
	if(status != HAL_OK)
	{
		printf("R820T2_i2c_read(0x%08X, %d) failed.\n\r", data, sz);
		return R820T2_TIMEOUT_UserCallback();
	}
	
	/* reverse bits */
	for(uint8_t i = 0;i<sz;i++)
	{
		data[i] = (bitrev_lut[data[i] & 0xf] << 4) | bitrev_lut[data[i] >> 4];
	}
#endif
	
    /* success */
    return 0;
}

uint8_t R820T2_init(void)
{
	uint8_t i;
	GPIO_InitTypeDef GPIO_InitStruct = {0};
	
	__HAL_RCC_GPIOB_CLK_ENABLE();
	
	/**I2C1 GPIO Configuration
	PB6     ------> I2C1_SCL
	PB7     ------> I2C1_SDA
	*/
	GPIO_InitStruct.Pin = GPIO_PIN_6|GPIO_PIN_7;
	GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
	GPIO_InitStruct.Pull = GPIO_NOPULL;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStruct.Alternate = GPIO_AF4_I2C1;
	HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

	/* reset/init the I2C port */
	R820T2_i2c_reset();

	/** Configure Analogue filter
	*/
	if (HAL_I2CEx_ConfigAnalogFilter(&hi2c1, I2C_ANALOGFILTER_ENABLE) != HAL_OK)
	{
		Error_Handler();
	}

	/** Configure Digital filter
	*/
	if (HAL_I2CEx_ConfigDigitalFilter(&hi2c1, 0) != HAL_OK)
	{
		Error_Handler();
	}

    /* test if R820 exists */
    R820T2_i2c_read_raw(&i, 1);
    if(i!=0x96)
    {
        r820t_xtal_freq = 0;
        r820t_if_freq = 0;
        r820t_freq = 0;
        return 1;
    }
    
    /* initialize some operating parameters */
    r820t_xtal_freq = XTAL_FREQ;
    r820t_if_freq = 5000000;
    r820t_freq = 144000000;
    
    /* initialize the device */
    for(i=R820T2_WRITE_START;i<R820T2_NUM_REGS;i++)
        R820T2_i2c_write_reg(i, r82xx_init_array[i]);

    /* Calibrate */
    R820T2_calibrate();
    
    /* set freq after calibrate */
    R820T2_set_freq(r820t_freq);
    
    return 0;
}
